<resources>
    <string name="app_name" translatable="false">Podium</string>

    <!-- BottomNavigationBar Items -->
    <string name="title_home">Home</string>
    <string name="title_notifications">Mentions</string>
    <string name="title_me">Me</string>
    <string name="title_bookmarks">Bookmarks</string>

    <!-- LoginActivity -->
    <string name="title_activity_login">Login to Alles</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_text">Login</string>
    <string name="login_snackbar_input">Please input your login details!</string>
    <string name="login_snackbar_error">There was an error trying to log in</string>
    <string name="post_snackbar_error">There was an error trying to post</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>

    <!-- item_post -->
    <string name="description_plus" translatable="false">+1</string>
    <string name="description_minus" translatable="false">-1</string>
    <string name="vote_snackbar_error">There was an error trying to vote</string>

    <string name="etasoon" translatable="false">eta s0n</string>

    <!-- Profile -->
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="follows_you">Follows you</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="staff">Staff</string>
    <string name="plus">Alles+</string>

    <!-- PostActivity -->
    <string name="post">Post</string>
    <string name="post_hint_1">What are you thinking?</string>
    <string name="post_hint_2">How has your day been?</string>
    <string name="post_hint_3">What\'s up?</string>
    <string name="post_hint_4" translatable="false">Hmm…</string>
    <string name="post_hint_5">*thinking*</string>

    <string name="reply">Reply</string>
    <string name="reply_to">Reply to</string>
    <string name="replying">Replying to</string>
    <string name="thread">Thread</string>

    <!-- Preference Titles -->
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="app_info">App info</string>
    <string name="app_info_secondary" translatable="false">Podium v1.0</string>
    <string name="app_info_message">Podium, an Alles client for Android.\n\nMade with ❤ from Mexico c:</string>

    <string name="licenses">Licenses</string>
    <string name="licenses_secondary">This app is possible thanks to this software</string>

    <string name="app_preferences">App settings</string>
    <string name="theme">Theme</string>

    <!-- Theme entries -->
    <string name="theme_default">System default</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_restart">If the theme isn\'t applied, restart the app</string>

    <string name="account_preferences">Account settings</string>
    <string name="name">Name</string>
    <string name="nickname">Nickname</string>

    <string name="cancel">Cancel</string>
    <string name="close">Close</string>

    <!-- Errors -->
    <string name="retry">Retry</string>
    <string name="error_network">There was an error trying to load this</string>
    <string name="error_network_uwu">Oopsie, UwU, something happened! OwO</string>

    <!-- ImageViewer Activity -->
    <string name="saving_image">Saving image…</string>
    <string name="saved_image">Saved!</string>
    <string name="couldnt_save_image">There was a problem saving the image</string>

    <!-- Permissions -->
    <string name="storage_permission">Storage permission</string>
    <string name="storage_permission_why">The app needs this permission to save the image</string>
    <string name="continue_">Continue</string>
    <string name="copy_link">Copy link</string>
    <string name="delete_post">Remove post</string>
    <string name="bookmark_post">Add to bookmarks</string>
    <string name="bookmark_post_remove">Remove from bookmarks</string>
    <string name="removed">Removed</string>
    <string name="copied">Copied</string>
    <string name="added_to_bookmarks">Added to bookmarks</string>
    <string name="delete_post_confirmation">Tap here to delete the post</string>
    <string name="removed_from_bookmarks">Removed from bookmarks</string>
</resources>