<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="dev.idkwuu.allesandroid.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="dev.idkwuu.allesandroid.ui.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_bookmarks"
        android:name="dev.idkwuu.allesandroid.ui.BookmarksFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_bookmarks" />

    <fragment
        android:id="@+id/navigation_me"
        android:name="dev.idkwuu.allesandroid.ui.ProfileFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_profile" />
</navigation>