<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fluent_arrow_left_24_regular"
            android:tint="@color/colorPrimary"
            android:background="@android:color/transparent"
            android:layout_marginStart="8dp"
            android:padding="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textAppearance="@style/headline3"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

     <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_preferences"
            android:textAllCaps="true"
            style="@style/text_body"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/theme"
            style="@style/cardview_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/theme" />

                    <TextView
                        android:id="@+id/theme_secondary_line"
                        style="@style/text_body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/theme_default" />

                </LinearLayout>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_fluent_color_24_filled" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textAllCaps="true"
            style="@style/text_body"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/licenses"
            style="@style/cardview_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/licenses" />

                    <TextView
                        style="@style/text_body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/licenses_secondary" />

                </LinearLayout>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_fluent_info_24_filled" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/app_info"
            style="@style/cardview_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_info" />

                    <TextView
                        android:id="@+id/app_info_version"
                        style="@style/text_body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_info_secondary" />

                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_launcher_round" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>