<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/main">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:importantForAutofill="no"
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:allowUndo="true"
            android:background="@null"
            android:cursorVisible="true"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            tools:hint="@string/post_hint_1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/imageContainer"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="16dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <ImageButton
                    android:id="@+id/removePhoto"
                    style="@style/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/background_circle"
                    android:src="@drawable/ic_fluent_dismiss_12_filled"
                    android:tint="@android:color/white"
                    android:layout_gravity="end|top"/>
            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/addImage"
                style="@style/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:padding="12dp"
                android:tint="@color/neutral"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_fluent_image_add_24_regular" />

            <Button
                android:id="@+id/post"
                style="@style/common_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                app:backgroundTint="@color/disabled"
                android:drawableLeft="@drawable/ic_fluent_send_20_filled"
                android:drawableTint="@android:color/white"
                android:enabled="false"
                android:text="@string/post"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/cancel"
                style="@style/big_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/cancel" />
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>